components/web-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-pod
  ports:
    - protocol: TCP
      port: 443
